--- a/vetclinic-persistence/pom.xml
+++ b/vetclinic-persistence/pom.xml
@@ -37,5 +37,10 @@
             </exclusions>
 
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
