--- a/vetclinic-persistence/src/main/resources/application.properties
+++ b/vetclinic-persistence/src/main/resources/application.properties
@@ -20,3 +20,4 @@ spring.jpa.generate-ddl=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+server.context-path=/api
