--- a/vetclinic-service/pom.xml
+++ b/vetclinic-service/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>vetclinic-persistence</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 
 
