--- a/vetclinic-web/pom.xml
+++ b/vetclinic-web/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
         </dependency>
+        <dependency>
+            <groupId>vistar</groupId>
+            <artifactId>vetclinic-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
