--- a/vetclinic-persistence/pom.xml
+++ b/vetclinic-persistence/pom.xml
@@ -27,6 +27,13 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <version>1.5.3.RELEASE</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>1.5.3.RELEASE</version>
             <exclusions>
