start security module

--- a/vetclinic-service/pom.xml
+++ b/vetclinic-service/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>jackson-annotations</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>4.2.2.RELEASE</version>
+        </dependency>
     </dependencies>
 
 
