--- a/vetclinic-service/pom.xml
+++ b/vetclinic-service/pom.xml
@@ -26,6 +26,16 @@
             <artifactId>spring-security-core</artifactId>
             <version>4.2.2.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>22.0-android</version>
+        </dependency>
     </dependencies>
 
 
