--- a/vetclinic-persistence/src/main/resources/application.properties
+++ b/vetclinic-persistence/src/main/resources/application.properties
@@ -13,11 +13,11 @@
 
 spring.datasource.url=jdbc:postgresql://localhost/postgres
 spring.datasource.username=postgres
-spring.datasource.password=123root123
+spring.datasource.password=1234
 spring.jpa.properties.hibernate.default_schema=vetclinic
 spring.jpa.generate-ddl=true
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-server.context-path=/api
+#server.context-path=/api
