the save of new client request

--- a/vetclinic-persistence/src/main/resources/application.properties
+++ b/vetclinic-persistence/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 ##Hibernate Configuration:
 #db.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
 #db.hibernate.show_sql=true
-#db.entitymanager.packages.to.scan=entities
+#db.entitymanager.packages.to.scan=forms
 #db.hibernate.hbm2ddl.auto = create
 #db.hibernate.default_schema = vetclinic
 
