--- a/vetclinic-persistence/src/main/resources/application.properties
+++ b/vetclinic-persistence/src/main/resources/application.properties
@@ -1,23 +1,11 @@
-##DB properties:
-#db.driver=org.postgresql.Driver
-#db.url=jdbc:postgresql://localhost:5432/postgres
-#db.username=postgre
-#db.password=1234
-#
-##Hibernate Configuration:
-#db.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
-#db.hibernate.show_sql=true
-#db.entitymanager.packages.to.scan=forms
-#db.hibernate.hbm2ddl.auto = create
-#db.hibernate.default_schema = vetclinic
 
 spring.datasource.url=jdbc:postgresql://localhost/postgres
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=123root123
 spring.jpa.properties.hibernate.default_schema=vetclinic
 spring.jpa.generate-ddl=true
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-#server.context-path=/api
+
