--- a/vetclinic-persistence/src/main/resources/application.properties
+++ b/vetclinic-persistence/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:postgresql://localhost/postgres
 spring.datasource.username=postgres
-spring.datasource.password=123root123
+spring.datasource.password=1234
 spring.jpa.properties.hibernate.default_schema=vetclinic
 spring.jpa.generate-ddl=true
 
