--- a/vetclinic-persistence/src/main/resources/application.properties
+++ b/vetclinic-persistence/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 
 spring.datasource.url=jdbc:postgresql://localhost/postgres
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=123root123
 spring.jpa.properties.hibernate.default_schema=vetclinic
 spring.jpa.generate-ddl=true
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-elasticsearch.clustername = elasticsearch
-elasticsearch.host = localhost
-elasticsearch.port = 9300
+
+#elasticsearch.clustername = elasticsearch
+#elasticsearch.host = localhost
+#elasticsearch.port = 9300
